chore: fixing lint errors
