# server/src/build/swagger.json
@@ -6,135 +6,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"Player": {
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"team": {
-						"type": "string"
-					},
-					"jerseyNumber": {
-						"type": "number",
-						"format": "double"
-					},
-					"grade": {
-						"type": "number",
-						"format": "double"
-					},
-					"height": {
-						"type": "string"
-					},
-					"weight": {
-						"type": "number",
-						"format": "double"
-					},
-					"positions": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"name",
-					"team",
-					"jerseyNumber",
-					"grade",
-					"height",
-					"weight",
-					"positions"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Pick_Player.name-or-team-or-jerseyNumber-or-grade-or-height-or-weight-or-positions_": {
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"team": {
-						"type": "string"
-					},
-					"jerseyNumber": {
-						"type": "number",
-						"format": "double"
-					},
-					"grade": {
-						"type": "number",
-						"format": "double"
-					},
-					"height": {
-						"type": "string"
-					},
-					"weight": {
-						"type": "number",
-						"format": "double"
-					},
-					"positions": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"name",
-					"team",
-					"jerseyNumber",
-					"grade",
-					"height",
-					"weight",
-					"positions"
-				],
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"PlayerCreationParams": {
-				"$ref": "#/components/schemas/Pick_Player.name-or-team-or-jerseyNumber-or-grade-or-height-or-weight-or-positions_"
-			},
-			"FlattenMaps_T_": {
-				"properties": {},
-				"type": "object"
-			},
-			"PlayerDoc": {
-				"$ref": "#/components/schemas/FlattenMaps_T_"
-			},
-			"Team": {
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"season": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"name",
-					"season"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Pick_Team.name-or-season_": {
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"season": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"name",
-					"season"
-				],
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"TeamCreationParams": {
-				"$ref": "#/components/schemas/Pick_Team.name-or-season_"
-			},
 			"User": {
 				"properties": {
 					"id": {
@@ -158,16 +29,16 @@
 			},
 			"Pick_User.email-or-name_": {
 				"properties": {
-					"name": {
+					"email": {
 						"type": "string"
 					},
-					"email": {
+					"name": {
 						"type": "string"
 					}
 				},
 				"required": [
-					"name",
-					"email"
+					"email",
+					"name"
 				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
@@ -191,204 +62,6 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/api/players/{playerId}": {
-			"get": {
-				"operationId": "GetPlayer",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/Player"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "playerId",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					},
-					{
-						"in": "query",
-						"name": "name",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			},
-			"delete": {
-				"operationId": "DeletePlayer",
-				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "playerId",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
-			}
-		},
-		"/api/players": {
-			"get": {
-				"operationId": "GetAllPlayers",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/Player"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			},
-			"post": {
-				"operationId": "CreatePlayer",
-				"responses": {
-					"201": {
-						"description": "Created"
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/PlayerCreationParams"
-							}
-						}
-					}
-				}
-			},
-			"put": {
-				"operationId": "ModifyPlayer",
-				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/PlayerDoc"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/api/teams": {
-			"get": {
-				"operationId": "GetAllTeams",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/Team"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			},
-			"post": {
-				"operationId": "CreateTeam",
-				"responses": {
-					"201": {
-						"description": "Created"
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/TeamCreationParams"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/api/teams/{teamId}": {
-			"get": {
-				"operationId": "GetTeam",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/Team"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "teamId",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					},
-					{
-						"in": "query",
-						"name": "name",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
 		"/api/users/{userId}": {
 			"get": {
 				"operationId": "GetUser",
